--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   icons_plus: ^5.0.0
+  intl_phone_number_input: ^0.7.4
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
